# aioseinfeld

./: .gitignore  CHANGELOG.md  README.md  makefile  pyproject.toml  requirements.txt
.github/: issue_template.md
.github/workflows/: build.yml
aioseinfeld/: __init__.py  seinfeld.py  types.py
aioseinfeld/tests/: __init__.py  __main__.py  smoke.py
