[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "aioseinfeld"
author = "John Reese"
author-email = "john@noswap.com"
description-file = "README.md"
home-page = "https://github.com/jreese/aioseinfeld"
requires = ["aiosqlite"]
requires-python = ">=3.7"
classifiers = [
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries",
]

[tool.flit.sdist]
exclude = [
    ".github/",
]

[tool.attribution]
signed_tags = false

[tool.coverage.run]
branch = true
include = ["aioseinfeld/*"]
omit = ["aioseinfeld/tests/*"]

[tool.coverage.report]
fail_under = 50
precision = 1
show_missing = true
skip_covered = true

[tool.isort]
line_length = 88
multi_line_output = 3
force_grid_wrap = false
include_trailing_comma = true
use_parentheses = true
